Update manifest.json for name and logo changes

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Arcbotics - Statbotics Inside TBA (The Blue Alliance)",
-  "description": "This extension brings scouting statistics from Statbotics into TBA (The Blue Alliance) Developed by Yusuf Ege Doğan of ARC#6014",
+  "name": "Statbotics Inside TBA",
+  "description": "This extension brings scouting statistics from Statbotics into TBA (The Blue Alliance). Developed by Yusuf Ege Doğan of ARC#6014",
   "version": "0.1",
   "manifest_version": 3,
   "action": {
@@ -24,14 +24,18 @@
     "storage"
   ],
   "icons": {
-    "16": "Arcbotics Logo.png",
-    "32": "Arcbotics Logo.png",
-    "48": "Arcbotics Logo.png",
-    "128": "Arcbotics Logo.png"
+    "16": "arcbotics_logo.png",
+    "32": "arcbotics_logo.png",
+    "48": "arcbotics_logo.png",
+    "128": "arcbotics_logo.png"
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "ThisIsFakeID@example.com"
+      "id": "ThisIsFakeID@example.com",
+      "data_collection_permissions": {
+        "required": ["none"],
+        "optional": []
+      }
     }
   }
 }
